# RTYPE

./: CONTRIBUTING.md  Doxyfile  LICENSE.md  README-dev.md  README.md  generateDoc.sh
engine/: CMakeLists.txt  conanfile.txt
engine/include/debug/: Logger.hpp
engine/include/ecs/: Component.hpp  Components.hpp  EntityManager.hpp  Event.hpp  System.hpp
engine/include/graphical/: GraphicalWindow.hpp
engine/src/debug/: Logger.cpp
factorio/: CMakeLists.txt  conanfile.txt
factorio/include/: AssetManager.hpp  Components.hpp  GameConfig.hpp  GameInput.hpp  GameLoop.hpp  GameRenderer.hpp  GameState.hpp  MapGenerator.hpp
factorio/include/debug/: Debugger.hpp  Logger.hpp
factorio/include/graphical/: GraphicalWindow.hpp
factorio/src/: GameInput.cpp  GameLoop.cpp  GameRenderer.cpp  GameState.cpp  MapGenerator.cpp  main.cpp
factorio/src/debug/: Debugger.cpp  Logger.cpp
flappy/: CMakeLists.txt  conanfile.txt
flappy/include/: AssetManager.hpp  Components.hpp  EntityTemplate.hpp  Game.hpp
flappy/include/debug/: Debugger.hpp  Logger.hpp
flappy/include/engine/ecs/: Component.hpp  ComponentContainer.hpp  EntityContainer.hpp  System.hpp
flappy/include/engine/graphical/: GraphicalVector.hpp
flappy/include/events/: deathEvent.hpp  inputEvent.hpp  moveEvent.hpp
flappy/include/systems/: CleanEntitySystem.hpp  CollisionSystem.hpp  HealthSystem.hpp  ObstacleSystem.hpp  ParallaxSystem.hpp  PlayerShootSystem.hpp  SpriteAnimationSystem.hpp  SpriteSystem.hpp  bonusSystem.hpp  movementSystem.hpp  transformSystem.hpp
flappy/src/: EntityTemplate.cpp  game.cpp  main.cpp
flappy/src/debug/: Debugger.cpp  Logger.cpp
flappy/src/scripts/: script.lua
game/include/: Game.hpp  QueueManager.hpp
game/include/config/: EcsConfig.hpp
game/include/events/: DeathEvent.hpp  InputEvent.hpp
game/include/systems/: CleanEntitySystem.hpp  CollisionSystem.hpp  LevelSystem.hpp  MovementSystem.hpp  ParallaxSystem.hpp  TransformSystem.hpp
game/src/: game.cpp
rtype-client/: CMakeLists.txt  conanfile.txt
rtype-client/assets/config/: fireParticle.json
rtype-client/include/: AssetManager.hpp  ClientGame.hpp  Components.hpp  EntityTemplate.hpp  Game.hpp  LevelManager.hpp  ScoreManager.hpp  clientInstance.hpp
rtype-client/include/engine/ecs/: Entity.hpp  Event.hpp
rtype-client/include/events/: inputEvent.hpp
rtype-client/include/graphical/: GraphicalWindow.hpp
rtype-client/include/systems/: BossAlienShootSystem.hpp  BossHiveShootSystem.hpp  CleanEntitySystem.hpp  CollisionSystem.hpp  EnemyShootSystem.hpp  HealthSystem.hpp  LifeTimeSystem.hpp  ParallaxSystem.hpp  ParticleSystem.hpp  PlayerShootSystem.hpp  ScoreSystem.hpp  SpawnBonusSystem.hpp  SpriteAnimationSystem.hpp  SpriteSystem.hpp  cubeSpriteSystem.hpp  movementSystem.hpp
rtype-client/src/: ClientGame.cpp  EntityTemplate.cpp  LevelManager.cpp  clientInstance.cpp  game.cpp  main.cpp
rtype-client/src/debug/: Debugger.cpp
rtype-client/src/scripts/: entities.lua  main.lua
rtype-server/: CMakeLists.txt  conanfile.txt
rtype-server/include/: Components.hpp  EntityTemplate.hpp  LevelManager.hpp  ScoreManager.hpp  ServerGame.hpp  serverInstance.hpp
rtype-server/include/systems/: BossAlienShootSystem.hpp  BossHiveShootSystem.hpp  EnemyShootSystem.hpp  HealthSystem.hpp  PlayerShootSystem.hpp  ScoreSystem.hpp  SpawnBonusSystem.hpp
rtype-server/src/: EntityTemplate.cpp  LevelManager.cpp  ScoreManager.cpp  ServerGame.cpp  main.cpp  serverInstance.cpp
scripts/linux/: build-client.sh  build-engine.sh  build-factorio.sh  build-flappy.sh  build-server.sh
scripts/windows/: build-client.bat  build-engine.bat  build-factorio.bat  build-server.bat
